[package]
name = "rkvm-input"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.8"
smallvec = { version = "1.10.0", features = ["serde"] }
tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time", "macros"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation"
] }
[target.'cfg(unix)'.dependencies]
inotify = "0.10.0"
libc = "0.2.77"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.83"
pkg-config = "0.3.19"

[lib]
doctest = false
